...
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">


    <androidx.drawerlayout.widget.DrawerLayout
            android:id="@+id/drawerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            tools:openDrawer="start">


...
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".view.MainActivity">


            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_toolbar"
                    app:navigationIcon="@drawable/ic_menu"
                    android:background="@color/colorPrimary"
                    app:title="@string/app_name"
                    app:titleTextColor="@android:color/white"
...
